Working on portalhandler

--- a/src/main/resources/TODO.txt
+++ b/src/main/resources/TODO.txt
@@ -1,9 +1,10 @@
 KitPvP:
-- spawn system
-- Combat log
-- NPC Shop
-- NPC KitSelector
-- kill assist
-- scoreboard
-- Leaderboard
-- level system
+- spawn system [+]
+- portal system [-]
+- Combat log [-]
+- NPC Shop [-]
+- NPC KitSelector [-]
+- kill assist [-]
+- scoreboard [-]
+- Leaderboard [-]
+- level system [-]
